istiofiles/virtual-service-no-retries.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: no-retries-customer
spec:
  hosts:
  - 'customer'
  http:
  - route:
    - destination:
        host: customer
    retries:
      attempts: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: no-retries-preference
spec:
  hosts:
  - 'preference'
  http:
  - route:
    - destination:
        host: preference
    retries:
      attempts: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: no-retries-recommendation
spec:
  hosts:
  - 'recommendation'
  http:
  - route:
    - destination:
        host: recommendation
    retries:
      attempts: 0
---
